# Brain-mcp

./: .gitignore  README.md  pyproject.toml
.metate/: profile.yml
brain_mcp/: cli.py  kind_ops.py  kinds.py  server.py  vault.py  vectors.py  writes.py
docs/: dreamcore.md
examples/: README.md  dream-cycle.example.md  dream-policy.example.md  signed-section.example.md
tests/: LIVE_TESTS.md  conftest.py  test_graph.py  test_kind_ops.py  test_kinds.py  test_links.py  test_pagerank.py  test_parsing.py  test_search_hybrid.py  test_security.py  test_vectors_db.py  test_writes.py
