[project]
name = "brain-mcp"
version = "0.1.0"
description = "MCP server exposing the Obsidian second-brain vault to Claude Code, Claude Desktop, OpenCode, and mobile clients."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4.0",
]

[project.scripts]
brain-mcp = "brain_mcp.server:main"
brain-reindex = "brain_mcp.cli:reindex"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_mcp"]
