[project]
name = "brain-mcp"
version = "0.1.0"
description = "MCP server exposing the Obsidian second-brain vault to Claude Code, Claude Desktop, OpenCode, and mobile clients."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4.0",
]

[project.optional-dependencies]
# Tooling for the metate gates (ruff check . && mypy . && pytest) — self-contained
# so `uv sync --extra dev` is all a contributor needs.
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.8", "types-PyYAML>=6.0"]

[project.scripts]
brain-mcp = "brain_mcp.server:main"
brain-reindex = "brain_mcp.cli:reindex"

[tool.pytest.ini_options]
testpaths = ["tests"]
# vault.py reads VAULT_PATH at import; conftest sets it before collection.
addopts = "-q"

[tool.mypy]
python_version = "3.11"
# Tests use pytest fixtures / monkeypatch dynamics that don't repay static typing.
exclude = ['^tests/']

[[tool.mypy.overrides]]
# Native extension + ML lib ship no type stubs.
module = ["sqlite_vec", "fastembed"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_mcp"]
